--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
       <div id="p1">
         <b><a name="p1"></a>
           <h4>intra</h4><br>
+          <img id="mod" src="./img/фото 5.JPG" alt="" height="122" width="52">
           <pre>
              intra
           </pre>
         </b>
       </div>
       <div id="p2">
-        <b><a name="p2"></a>
+        <a name="p2"></a>
           <h4>Interrupt</h4><br>
+          <img id="mod" src="./img/mode.jpg" alt="" height="122" width="52">
           <pre>
   - Сейчас будут выключены основные активы энергополя пространства. :: Ruth
   - Что это значит? – спросил я
@@ -80,13 +82,7 @@
 
 
 
-
-
   II.
-
-  I feel something's wrong
-  But the panic is on…
-
 
 
 
@@ -140,9 +136,11 @@
 
 
 
-          </pre>
-        </b>
-      </div>
+  </pre>
+</div>
+  <img id="mod" src="./img/фото 1.PNG" height="" width="502">
+  <img id="mod" src="./img/фото 2.PNG" height="" width="502">
+  <img id="mod" src="./img/фото 3.PNG" height="" width="502">
 
   <script src="./index.js"></script>
   <script src="./main.js"></script>
