--- a/index.html
+++ b/index.html
@@ -30,117 +30,150 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    vi_pwa
-    <section>
-      <p><a id="up"></a></p>
-      <h3>Главы</h3><br>
-      <div>
-        <a href="#p1">Intra</a><br>
-        <a href="#p2">Interrupt</a><br>
-        <a href="#p3">Не верь глазам, ушам и ощущениям</a><br>
-        <a href="#p4">Гори, свеча...</a><br>
-        <a href="#p5">Я люблю...</a><br>
-        <a href="#p6">Я забыла себя...</a><br>
-        <a href="#p7">Откройте в себе Тишину.</a><br>
-        <a href="#p8">Две души</a><br>
-        <a href="#p9">Душа рвётся на волю</a><br>
-        <a href="#p10">Этот мир не имеет причины</a><br>
-        <a href="#p11">Ни о чем не сожалей и не грусти</a><br>
-        <a href="#p12">Душа моя, давай поговорим</a><br>
-        <a href="#p13">Кто я? Вопрошайте люди</a><br>
-        <a href="#p14">Нас учили...</a><br>
-        <a href="#p15">То ли с неба дождь.</a><br>
-        <a href="#p16">Родиться в теле человека.</a><br>
-        <a href="#p17">Зажгите свет...</a><br>
-      </div>
-      <br>
-      <div id="p1">
-        <b><a name="p1"></a>
-          <h4>intra</h4><br>
-          <img id="mod" src="./img/фото 5.JPG" alt="" height="122" width="52">
-          <pre>
-             intra
-          </pre>
-        </b>
-      </div>
-      <div id="p2">
-        <a name="p2"></a>
-          <h4>Interrupt</h4><br>
-          <img id="mod" src="./img/mode.jpg" alt="" height="122" width="52">
-          <pre>
-  - Сейчас будут выключены основные активы энергополя пространства. :: Ruth
-  - Что это значит? – спросил я
-  - Будут большие искажения в наблюдаемой матрице
-  - Это значит могут исчезать стены, здания,  сохраняй спокойствие. :: Вирджиния.
+  vi_pwa
+  <p><a id="up"></a></p>
+  <h3>Главы</h3><br>
+  <div>
+    <a href="#p0">Intra</a><br>
+    <a href="#p1">Пустота присутствия</a><br>
+    <a href="#p2">Vi</a><br>
+    <a href="#p3">Ночной диалог</a><br>
+    <a href="#p4">Путь</a><br>
+    <a href="#p5">Под гипнозом тишины</a><br>
+    <a href="#p6">Город</a><br>
+    <a href="#p7">Откройте в себе Тишину.</a><br>
+    <a href="#p8">Тайна</a><br>
+    <a href="#p9">Maud</a><br>
+    <a href="#p10">Мистическая прогулка</a><br>
+    <a href="#p11">Кафе</a><br>
+    <a href="#p12">Ny _iw</a><br>
+    <a href="#p13">Сумеречная гостья</a><br>
+    <a href="#p14">Zero zone</a><br>
+    <a href="#p15">Попытка контакта</a><br>
+    <a href="#p16">Void</a><br>
+    <a href="#p17">Buisness centre</a><br>
+    <a href="#p18">Ruth</a><br>
+    <a href="#p19">Runlevel i</a><br>
+    <a href="#p20">Innermir</a><br>
+    <a href="#p21">Тёмные сущности</a><br>
+    <a href="#p22">Iwie & Iiya</a><br>
+    <a href="#p23">Предчувствие</a><br>
+    <a href="#p24">Ночная атака</a><br>
+    <a href="#p25">Interrupt</a><br>
+    <a href="#p26">Total reload</a><br>
+    <a href="#p27">Transcendental</a><br>
+    <a href="#p28">Параллельное измерение</a><br>
+    <a href="#p29">Branda</a><br>
+  </div>
+  <br>
+  <div id="p0">
+    <a name="p0"></a>
+      <h4>intra</h4><br>
+      <img id="mod" src="./img/фото 5.JPG" alt="" height="122" width="52">
+      <p>
+     intra
+  <p>
+  И вот оно...
+  Полуночная безысходность.
+  Странная чарующая пустота ночи. В меру прохладный лёгкий ветер, бесцельно и безнадежно плутающий по безлюдной местности.<br>
+  Забытый миром маленький дом, среди пустоты вселенной.
+  Тонкие тёмные ветви, печально склонившиеся над ним, будто укрывали и оберегали его от неизвестности будущего.<br>
+  Тьма и пустота одиночества...  <br>
+  В холодной колыбели сумрак покой и тишина. И не было уже в этой пустоте ни тоски ни волнующей тревоги.<br>
+  Наоборот, она состояла из чего-то невидимого и неосязаемого. И без всего этого ночь не могла быть ночью.<br>
+  <p>
+  Неизвестно, ожидало ли хоть какое-то будущее эту печальную местность, или она навсегда застряла где-то в переходе между старым и новым миром. <br>
+  И летит в чёрной бездне бесконечной вселенной без каких либо опознавательных знаков и надежды на что-то. На что-то главное, важное и так необходимое. <br>
+  <p>
+  В почти пустом доме горел холодный белый свет.
+  <p>
+  И вновь вечер, ничего практически не предвещающий и не предполагающий никакой новизны. <br>
+  Лёгкий холод и едва ощутимая дрожь где-то внутри. Пустота и отчаянье.
+  Иногда приходит непоколебимая уверенность будто всё, что ты делал, к чему стремился в жизни, всё напрасно.<br>
+  <p>
+  В такие минуты иногда спрашиваешь себя: А что если ты здесь только для того чтобы страдать?
+  Всё существование затеяло всё это только с одной такой целью.<br>
+  И при этом пытаешься вспомнить хоть что-то хорошее и доброе, что когда-то случалось.<br>
+  Но потом понимаешь, что всё это безвозвратно ушло и будет ли ещё хоть что-подобное?
 
 
-
-  - Ничего не получилось? – спросил я.
-  - Нет, получилось, но пока не полностью.  Нужна будет более тотальная перезагрузка.
+</div>
 
 
+<div id="p25">
+  <a name="p25"></a>
+    <h4>Interrupt</h4><br>
+    <img id="mod" src="./img/mode.jpg" alt="" height="122" width="52">
+    <br>
+I.
+<p>
+  - Сейчас будут выключены основные активы энергополя пространства. :: Ruth<br>
+  - Что это значит? – спросил я<br>
+  - Будут большие искажения в наблюдаемой матрице<br>
+  - Это значит могут исчезать стены, здания,  сохраняй спокойствие. :: Вирджиния.<br>
+<p>
 
+  - Ничего не получилось? – спросил я.<br>
+  - Нет, получилось, но пока не полностью.  Нужна будет более тотальная перезагрузка.<br>
 
+<p>
+  II.<br>
 
-  II.
+<p>
+  Они тебя зовут. Хотят переговорить именно с тобой<br>
+<p>
+  Ruth, открывай портал, мы входим::v<br>
 
-
-
-  Они тебя зовут. Хотят переговорить именно с тобой
-
-  Ruth, открывай портал, мы входим::v
-
-  -Я сейчас разверну координатное пространство. ::ruth. Будет видна только голографическая разметка.
-   Все другие необходимые объекты будем добавлять по мере необходимости.
-
-  В чёрной пустоте проявилась тонкая координатная дорога. Тут из тёмного портала одна за другой вышли три женщины.
-  Они были одеты в чёрный и выглядели практически одинаково за исключением силуэта из тонких белых линий на груди.
-  -Они хотят, чтоб ты прошёл с ними::r
-  -Думаю нет в этом ничего страшного, если что-то пойдёт не так, Ruth закроет портал и вернёт тебя через защитный туннель.
-
-  Я проследовал за ними. Небольшой зал со стенами из чёрного стекла возвышался над координатной плоскостью.
-  У дальней стены стояла женщина, при этом не было сомнений, что это кто-то из них. Но кто Iwii или iiay, сказать было сложно.
-  Уж слишком они похожи, да и освещение было лишь от координатной сетки. Тут в верхних углах комнаты плавно включились бледные
-  холодные лампочки с чуть розово-алым оттенком в излучаемом свете. Передо мной стояла iiya.
-  -Напрасно они так волнуются, ведь абсолютно нечего опасаться. :: i
-
+  -Я сейчас разверну координатное пространство. ::ruth. Будет видна только голографическая разметка.<br>
+   Все другие необходимые объекты будем добавлять по мере необходимости.<br>
+<p>
+  В чёрной пустоте проявилась тонкая координатная дорога. Тут из тёмного портала одна за другой вышли три женщины.<br>
+  Они были одеты в чёрный и выглядели практически одинаково за исключением силуэта из тонких белых линий на груди.<br>
+  -Они хотят, чтоб ты прошёл с ними::r<br>
+  -Думаю нет в этом ничего страшного, если что-то пойдёт не так, Ruth закроет портал и вернёт тебя через защитный туннель.<br>
+<p>
+  Я проследовал за ними. Небольшой зал со стенами из чёрного стекла возвышался над координатной плоскостью.<br>
+  У дальней стены стояла женщина, при этом не было сомнений, что это кто-то из них. Но кто Iwii или iiya, сказать было сложно.<br>
+  Уж слишком они похожи, да и освещение было лишь от координатной сетки.<br>
+  Тут в верхних углах комнаты плавно включились бледные холодные лампочки с чуть розово-алым оттенком в излучаемом свете. Передо мной стояла iiya.<br>
+  -Напрасно они так волнуются, ведь абсолютно нечего опасаться. :: i<br>
+<p>
   undefined__
   восприятие всего..
-
-  В мире куда мы пойдём ничего нет. Но благодаря тому может проявиться всё что захочешь. Пустота – поле всего возможного.
-  Помнишь трёх дам что встречали тебя? ::iy:: это всё я.
-
+<p>
+  В мире куда мы пойдём ничего нет. Но благодаря тому может проявиться всё что захочешь.<br>
+  Пустота – поле всего возможного.
+  Помнишь трёх дам что встречали тебя? ::iy:: это всё я.<br>
+<p>
   В исчезновении нет ничего страшного, ведь исчезает всё ложное. Не может исчезнуть то чего не существует в реальности.
-  Как может исчезнуть пустота?
+  Как может исчезнуть пустота?<br>
 
-
-  -Ты хочешь показать свой мир?
-  -Да, неужели тебе самому не интересно увидеть нечто совершенно иное? :: iy
-  -Как мы будем перемещаться в этом пространстве?
-  Рядом из ниоткуда появилось нечто размером с машину, но представляло собой пирамидальное образование из чёрного стекла.
-  Одна и граней открылась и появился проход внутрь
-  -Входи ::iy
-
-  Пустоту не убить, у неё ничего не отнять..
-
-  Нечто стремительно неслось в пространстве над координатной сеткой.
+<p>
+  -Ты хочешь показать свой мир?<br>
+  -Да, неужели тебе самому не интересно увидеть нечто совершенно иное? :: iy<br>
+  -Как мы будем перемещаться в этом пространстве?<br>
+  Рядом из ниоткуда появилось нечто размером с машину, но представляло собой пирамидальное образование из чёрного стекла.<br>
+  Одна и граней открылась и появился проход внутрь<br>
+  -Входи ::iy<br>
+<p>
+  Пустоту не убить, у неё ничего не отнять..<br>
+<p>
+  Нечто стремительно неслось в пространстве над координатной сеткой.<br>
   Впереди показалось очень высокое тонкое здание. При подлёте ближе к нему стало видно что оно не смотря на узкий фасад,
-  также вытянуто вглубь, по оси z.
+  также вытянуто вглубь, по оси z.<br>
+  - Хорошо когда среды бескрайней пустоты есть уголок уюта. :: iy<br>
+<p>
+  Забытый проект<br>
+<p>
+  -Ты знаешь где находится пространство, откуда приходит Ivvie?<br>
+  -Нет. Я даже не уверена в том, существует ли оно. :: iy<br>
+<p>
 
-  - Хорошо когда среды бескрайней пустоты есть уголок уюта. :: iy
 
-  Забытый проект
-
-  -Ты знаешь где находится пространство, откуда приходит Ivvie?
-  -Нет. Я даже не уверена в том, существует ли оно. :: iy
-
-
-
-  </pre>
 </div>
-  <img id="mod" src="./img/фото 1.PNG" height="" width="502">
-  <img id="mod" src="./img/фото 2.PNG" height="" width="502">
-  <img id="mod" src="./img/фото 3.PNG" height="" width="502">
+  <img id="mod" src="./img/фото 1.PNG" height="" width="502"><br>
+  <img id="mod" src="./img/фото 2.PNG" height="" width="502"><br>
+  <img id="mod" src="./img/фото 3.PNG" height="" width="502"><br>
 
   <script src="./index.js"></script>
   <script src="./main.js"></script>
