--- a/index.html
+++ b/index.html
@@ -30,40 +30,40 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-  vi_pwa
+  <div id="header">vi_pwa</div>
+  <div id="menu">
   <p><a id="up"></a></p>
   <h3>Главы</h3><br>
-  <div>
-    <a href="#p0">Intra</a><br>
-    <a href="#p1">Пустота присутствия</a><br>
-    <a href="#p2">Vi</a><br>
-    <a href="#p3">Ночной диалог</a><br>
-    <a href="#p4">Путь</a><br>
-    <a href="#p5">Под гипнозом тишины</a><br>
-    <a href="#p6">Город</a><br>
-    <a href="#p7">Откройте в себе Тишину.</a><br>
-    <a href="#p8">Тайна</a><br>
-    <a href="#p9">Maud</a><br>
-    <a href="#p10">Мистическая прогулка</a><br>
-    <a href="#p11">Кафе</a><br>
-    <a href="#p12">Ny _iw</a><br>
-    <a href="#p13">Сумеречная гостья</a><br>
-    <a href="#p14">Zero zone</a><br>
-    <a href="#p15">Попытка контакта</a><br>
-    <a href="#p16">Void</a><br>
-    <a href="#p17">Buisness centre</a><br>
-    <a href="#p18">Ruth</a><br>
-    <a href="#p19">Runlevel i</a><br>
-    <a href="#p20">Innermir</a><br>
-    <a href="#p21">Тёмные сущности</a><br>
-    <a href="#p22">Iwie & Iiya</a><br>
-    <a href="#p23">Предчувствие</a><br>
-    <a href="#p24">Ночная атака</a><br>
-    <a href="#p25">Interrupt</a><br>
-    <a href="#p26">Total reload</a><br>
-    <a href="#p27">Transcendental</a><br>
-    <a href="#p28">Параллельное измерение</a><br>
-    <a href="#p29">Branda</a><br>
+    <a href="#p0">0. Intra</a><br>
+    <a href="#p1">1. Пустота присутствия</a><br>
+    <a href="#p2">2. Vi</a><br>
+    <a href="#p3">3. Ночной диалог</a><br>
+    <a href="#p4">4. Путь</a><br>
+    <a href="#p5">5. Под гипнозом тишины</a><br>
+    <a href="#p6">6. Город</a><br>
+    <a href="#p7">7. Откройте в себе Тишину.</a><br>
+    <a href="#p8">8. Тайна</a><br>
+    <a href="#p9">9. Maud</a><br>
+    <a href="#p10">10. Мистическая прогулка</a><br>
+    <a href="#p11">11. Кафе</a><br>
+    <a href="#p12">12. Ny _iw</a><br>
+    <a href="#p13">13. Сумеречная гостья</a><br>
+    <a href="#p14">14. Zero zone</a><br>
+    <a href="#p15">15. Попытка контакта</a><br>
+    <a href="#p16">16. Void</a><br>
+    <a href="#p17">17. Buisness centre</a><br>
+    <a href="#p18">18. Ruth</a><br>
+    <a href="#p19">19. Runlevel i</a><br>
+    <a href="#p20">20. Innermir</a><br>
+    <a href="#p21">21. Тёмные сущности</a><br>
+    <a href="#p22">22. Iwie & Iiya</a><br>
+    <a href="#p23">23. Предчувствие</a><br>
+    <a href="#p24">24. Ночная атака</a><br>
+    <a href="#p25">25. Interrupt</a><br>
+    <a href="#p26">26. Total reload</a><br>
+    <a href="#p27">27. Transcendental</a><br>
+    <a href="#p28">28. Параллельное измерение</a><br>
+    <a href="#p29">29. Branda</a><br>
   </div>
   <br>
   <div id="p0">
@@ -95,11 +95,80 @@
   Всё существование затеяло всё это только с одной такой целью.<br>
   И при этом пытаешься вспомнить хоть что-то хорошее и доброе, что когда-то случалось.<br>
   Но потом понимаешь, что всё это безвозвратно ушло и будет ли ещё хоть что-подобное?
-
+<p>
 
 </div>
+<div id="p24">
+  <a name="p24"></a>
+    <h4>24. Ночная атака</h4><br>
+    <img id="mod" src="" alt="" height="122" width="52">
+    <br>
+<p>
 
+               I.
+<p>
+Предчувствие...
+Ты знаешь, что кто-то есть, но никого не видно...
+<p>
+Перекодировка пространства.
+<p>
+Сделав ещё несколько поворотов в лабиринтах здания,
+мы пришли в офис Вирджинии.
+<p>
+Вирджиния подошла к терминальным мониторам и стала всматриваться в бегущие цифры и ежесекундно меняющиеся диаграммы.<br>
+<p>
+- Что происходит? -спросил я её.
+- Изменяются матричные коды.
+Ты привык видеть то, что является причиной того или иного события. Здесь же всё иначе…<br>
+Если пространство – лишь созданная трёхмерная голограмма, то достаточно внести изменения в коде, и всё начинает распадаться.<br>
+<p>
 
+Структуры Maud пытаются остановить атаку.
+Ruth взволнованно работала с компьютером.<br>
+<p>
+
+- Мы сейчас поедем в кампус к Maud. Насколько мне известно, Miut уже должна быть с ней.<br>
+Чтобы выйти в иную сферу необходимо потерять связь с данным пространством. С этой целью Ruth достроила голограмму высотки неподалеку от кампуса.<br>
+Если говорить вашим языком она теперь уходит в стратосферу.
+<p>
+- Неужели этого будет достаточно?<br>
+- Мы надеялись, но нет. Поэтому спроектировали специальный модуль, который будет подниматься вверх, пока не исчезнет резонанс с магнитной сеткой пространства.<br>
+- А что потом?<br>
+- Потом подойдут координаторы кольца и переведут тебя в другое пространство. Miut отправится к своей цивилизации,<br>
+она набрала достаточно опыта пребывания в этой мерности. Раньше они могли бы забрать её непосредственно отсюда,<br>
+но из-за катаклизмов нашего измерения это стала почти невозможно и даже опасно. Поэтому у нас нет другого выбора, кроме как отправить её с тобой.<br>
+- А как же ты?<br>
+- Мы с Maud останемся здесь. Точнее мы будем в специальном лепестке пространства, где с нами ничего не будет.<br>
+- Не представляю, как я буду без тебя<br>
+- Не переживай, это временно. Когда всё закончится, я снова буду с тобой. Со мной ничего не случится.<br>
+- А что будет с Ruth?<br>
+- Она будет на время переведена в состояние неактива  Мы вернём её, я надеюсь, уже в новое пространство.<br>
+<p>
+
+                           II.
+
+<p>
+                           Увидеть сквозь время и расстояние
+                                    Как окружает всё тёмная…
+
+<p>
+Ruth работала с терминалом. На чёрном экране монитора бежали бесконечные розово-алые строки с информацией о процессах.<br>
+-Я сейчас переведу пространство в аварийное состояние. Не пугайся<br>
+Свет в офисе ненадолго погас. Спустя несколько секунд загорелся тусклый красный свет.<br>
+Я подошёл к окну: как оказалось свет выключился не только в офисном здании, но и во всём городе.<br>
+<p>
+-Некоторое время мы будем находиться в аварийном режиме- промолвила Ruth, не отводя глаз от монитора.<br>
+-Всё готово чтобы отправиться к точке перехода:: Ruth<br>
+-Отлично. Пойдёмте к лифту:: Virginia<br>
+<p>
+На уровне 200 этажа будет капсула, не зависящая от гравитации и от чего бы то ни было ещё.<br>
+<p>
+#коридоры..комнаты..<br>
+#Поле всех возможностей<br>
+<p>
+Точка-бесконечность.<br>
+<p>
+</div>
 <div id="p25">
   <a name="p25"></a>
     <h4>Interrupt</h4><br>
