--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <meta property="og:site_name" content="vi_pwa">
     <meta name="fragment" content="!">
     <link rel=icon sizes=192x192 href="assets/logo-192.png">
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.js"
-      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <title>vi_pwa</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="./css/style.css">
@@ -41,8 +38,8 @@
     <a href="#p4">4. Путь</a><br>
     <a href="#p5">5. Под гипнозом тишины</a><br>
     <a href="#p6">6. Город</a><br>
-    <a href="#p7">7. Откройте в себе Тишину.</a><br>
-    <a href="#p8">8. Тайна</a><br>
+    <a href="#p7">7. Тайна</a><br>
+    <a href="#p8">8. Ночной мегаполис</a><br>
     <a href="#p9">9. Maud</a><br>
     <a href="#p10">10. Мистическая прогулка</a><br>
     <a href="#p11">11. Кафе</a><br>
@@ -66,12 +63,13 @@
     <a href="#p29">29. Branda</a><br>
   </div>
   <br>
+  <div class="container">
   <div id="p0">
     <a name="p0"></a>
-      <h4>intra</h4><br>
-      <img id="mod" src="./img/фото 5.JPG" alt="" height="122" width="52">
+      <h4>0. intra</h4><br>
+      <img id="" src="./img/фото 5.JPG" alt="" height="122" width="52">
       <p>
-     intra
+     I.
   <p>
   И вот оно...
   Полуночная безысходность.
@@ -101,7 +99,7 @@
 <div id="p24">
   <a name="p24"></a>
     <h4>24. Ночная атака</h4><br>
-    <img id="mod" src="" alt="" height="122" width="52">
+    <img id="" src="" alt="" height="122" width="52">
     <br>
 <p>
 
@@ -171,8 +169,8 @@ Ruth работала с терминалом. На чёрном экране м
 </div>
 <div id="p25">
   <a name="p25"></a>
-    <h4>Interrupt</h4><br>
-    <img id="mod" src="./img/mode.jpg" alt="" height="122" width="52">
+    <h4>25. Interrupt</h4><br>
+    <img id="" src="./img/mode.jpg" alt="" height="122" width="52">
     <br>
 I.
 <p>
@@ -237,7 +235,126 @@ I.
   -Ты знаешь где находится пространство, откуда приходит Ivvie?<br>
   -Нет. Я даже не уверена в том, существует ли оно. :: iy<br>
 <p>
+</div>
+<div id="p26">
+  <a name="p26"></a>
+    <h4>26. Total reload</h4><br>
+    <img id="" src="./img/v_26_1.png" alt="" height="82" width="122">
+    <br>
+I.
+<p>
+Мы перешли в здание, где можно было переждать процесс перезагрузки пространства.<br>
+<p>
+Здание не имело ни окон ни каких либо опознавательных знаков. Стены были как будто из цельного чёрного стекла.<br>
+Чёрный дом мироздания.
+<p>
+- Это помещение полностью защищено от катаклизмов пространства. Что бы не происходило с матрицей, если мы находимся внутри, нам ничего не угрожает.<br>
+Внутри так же имеется необходимое оборудование для управление матричными полями.
+<p>
 
+В помещении горел тусклый красно-розовый аварийный свет.<br>
+
+Было удивительно смотреть сквозь чёрные стекла здания и осознавать что за ними пустота и  ничего нет.<br>
+Нет никакой матрицы людей домов чего бы то ни было ещё.
+<p>
+
+- В принципе можно на всякий случай спуститься в помещение -1-го уровня, но, похоже, в этом нет необходимости.<br>
+ А также можно перемещаться в соседние здания по высотным переходам.
+<p>
+</div>
+
+<div id="p27">
+  <a name="p27"></a>
+    <h4>27. Трансцендентальный переход.</h4><br>
+    <img id="" src="./img/v_27_1.png" alt="" height="82" width="122">
+    <br>
+I.
+<p>
+
+Мы вышли за границы измерения. <br>
+- Удивительно! Невообразимая мерцающая мембрана. Переливы розового света из чёрной пустоты. <br>
+Как электрические разряды. Нет никакой  голубой планеты, никакого бескрайнего космоса и прочей ерунды. Просто потрясающе! <br>
+<p>
+Импульс проникновения<br>
+<p>
+
+
+II.
+<p>
+<img id="" src="./img/v_27_2.png" alt="" height="82" width="122">
+
+
+<p>
+Иное пространство где длинные тонкие здания висели в пустоте без какой-либо точки опоры. <br>
+Даже если темно, было всё отчётливо видно. <br>
+#Мы приблизились к одному из них. В вершине открылся ангар и мы плавно влетели туда. <br>
+<p>
+
+
+
+</div>
+<div id="p28">
+  <a name="p28"></a>
+    <h4>28. Параллельное измерение</h4><br>
+    <img id="" src="" alt="" height="122" width="52">
+    <br>
+I.
+<p>
+<div class="quote">
+У последней черты нас рассудят<br>
+И времени больше не будет…<br>
+</div>
+<p>
+Нулевое<br>
+Иные: энергетические формы жизни <br>
+<p>
+Потому что
+Когда эта жестокая холодная реальность приближается к нам, нам нужен друг. <br>
+Пустая, бесконечная…<br>
+<p>
+
+Не только они единая формация, каждая из нас тоже одно. <br>
+<p>
+Давай сегодня покажу как проявляется первоначальный импульс, тончайший чертёж нового измерения. <br>
+<p>
+
+</div>
+<div id="p29">
+  <a name="p29"></a>
+    <h4>29. Branda</h4><br>
+    <img id="" src="./img/v_29_1.png" alt="" height="62" width="122">
+    <br>
+I.
+<p>
+
+- Понимаешь, всё что существует здесь: город, этот мир. Это всё её творение. Вирджиния создала это пространство. <br>
+Это её идеал, который создан так же и для тебя.
+<p>
+- Она хочет вывести пространство на совершенно новый уровень. Перевести в максимальную мерность для такого построения структур. <br>
+Чтобы оно существовало как проявленная объективная реальность, но имело кодировку высших сфер.
+<p>
+
+
+
+- Почему же ты ушла?<br>
+- Потому что надоело всё. Вся иллюзорность, выдуманные миры. Эти здания, реки, горы и другие формы. Хотелось истины, какой бы она не была. <br>
+- Ты довольна увиденным. <br>
+- Конечно. Более чем. Всё оказалось даже лучше, чем я могла себе представить. <br>
+<p>
+- Надоело жить во лжи. Всё это чьё-то миротворение. Почему лучше именно так? Такая природа, светила, сценарии… Бред! Надоело играть в эти игры.<br>
+<p>
+
+
+</div>
+
+
+<div id="p">
+  <a name="p"></a>
+    <h4></h4><br>
+    <img id="mod" src="" alt="" height="122" width="52">
+    <br>
+
+</div>
 
 </div>
   <img id="mod" src="./img/фото 1.PNG" height="" width="502"><br>
