--- a/index.html
+++ b/index.html
@@ -4,30 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="This is a PWA called vi_pwa">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="pwa" >
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="author" content="" />
     <meta name="copyright" content="" />
-    <meta name="robots" content="follow"/>
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="vi_pwa">
-    <meta property="og:url" content="">
-    <meta property="og:image:secure_url" itemprop="image" content="">
-    <meta property="og:image" itemprop="image" content="">
-    <meta property="og:image:width" content="700" />
-    <meta property="og:image:height" content="700" />
-    <meta property="og:image:alt" content="OG image of vi_pwa" />
-    <meta property="og:description" content="This is a PWA called vi_pwa">
-    <meta property="og:site_name" content="vi_pwa">
-    <meta name="fragment" content="!">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="io_proj" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel=icon sizes=192x192 href="assets/logo-192.png">
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <title>vi_pwa</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-  <div id="header">vi_pwa</div>
+  <div id="hdr">vi_pwa</div>
   <div id="menu">
   <p><a id="up"></a></p>
   <h3>Главы</h3><br>
