add webkit transitions and keyframes

--- a/index.html
+++ b/index.html
@@ -53,16 +53,20 @@
     <a href="#p27">27. Transcendental</a><br>
     <a href="#p28">28. Параллельное измерение</a><br>
     <a href="#p29">29. Branda</a><br>
+    <div class="controls">
+      <a href="#" id="i_menu_btn">menu</a>
+      <a href="#" id="pdf">pdf</a>
+    </div>
   </div>
+  <div class="i_menu"></div>
   <br>
   <div class="container">
   <div id="p0" class="content">
     <a name="p0"></a>
-      <h4>0. intra</h4><br>
-      <img id="" src="./img/фото 5.JPG" alt="" height="122" width="52">
-      <p>
+      <h4>0. intra</h4>
      I.
   <p>
+  <img id="" src="./img/фото 5.JPG" alt="" height="122" width="52"><br>
   И вот оно...
   Полуночная безысходность.
   Странная чарующая пустота ночи. В меру прохладный лёгкий ветер, бесцельно и безнадежно плутающий по безлюдной местности.<br>
@@ -81,24 +85,21 @@
   Лёгкий холод и едва ощутимая дрожь где-то внутри. Пустота и отчаянье.
   Иногда приходит непоколебимая уверенность будто всё, что ты делал, к чему стремился в жизни, всё напрасно.<br>
   <p>
-  В такие минуты иногда спрашиваешь себя: А что если ты здесь только для того чтобы страдать?
-  Всё существование затеяло всё это только с одной такой целью.<br>
   И при этом пытаешься вспомнить хоть что-то хорошее и доброе, что когда-то случалось.<br>
   Но потом понимаешь, что всё это безвозвратно ушло и будет ли ещё хоть что-подобное?
 <p>
 </div>
 <div id="p17" class="content">
   <a name="p17"></a>
-    <h4> 17. Бизнес-центр</h4><br>
-    <img id="" src="" alt="" height="82" width="122">
-    <br>
+    <h4> 17. Бизнес-центр</h4>
 <p>
                                                I.
 <p>
 <div class="quote">
-                                                           Если это – сон, тем лучше<br>
-                                                           Лишь бы только не кончался.
+Если это – сон, тем лучше<br>
+Лишь бы только не кончался.
 </div>
+<!-- <img id="" src="" alt="" height="82" width="122"><br> -->
 <p>
 - Думаю, нам стоит отдохнуть от мистики и обилия новой шокирующей информации.
 <p>
@@ -184,11 +185,10 @@
 </div>
 <div id="p18" class="content">
   <a name="p18"></a>
-    <h4>18. Ruth</h4><br>
-    <img id="" src="" alt="" height="82" width="122">
-    <br>
+    <h4>18. Ruth</h4>
 I.
 <p>
+<!-- <img id="" src="" alt="" height="82" width="122"><br> -->
 Мы вышли из бизнес-центра. <br>
 - Ruth, а где вход в метро?<br>
 - Ты просто иди со мной. Вход появится сам, когда будет нужно. Спустя некоторое время впереди показалось пирамидальное образование.<br>
@@ -262,9 +262,7 @@ II.
 </div>
 <div id="p19" class="content">
   <a name="p19"></a>
-    <h4>19. Runlevel_i</h4><br>
-    <img id="" src="./img/v_19_1.png" alt="" height="202" width="122">
-    <br>
+    <h4>19. Runlevel_i</h4>
              I.
 <p>
 <div class="quote">
@@ -272,6 +270,7 @@ II.
                                                И улицы подняли вой..<br>
 
 </div>
+<img id="" src="./img/v_19_1.png" alt="" height="202" width="122"><br>
 <p>
 В офисных коридорах был приглушён свет. Сумрачная обстановка и тишина. Никого кроме Вирджинии здесь не было.<br>
 <p>
@@ -327,15 +326,14 @@ Beyond the void
 </div>
 <div id="p20" class="content">
   <a name="p20"></a>
-    <h4>20.  Innermir</h4><br>
-    <img id="" src="./img/v_20_1.png" alt="" height="62" width="122">
-    <br>
+    <h4>20. Innermir</h4>
 <p>
                I.
 <p>
 <div class="quote">
                           В пустоте ни зла ни границ…<br>
 </div>
+<img id="" src="./img/v_20_1.png" alt="" height="62" width="122"><br>
 <p>
 Одно из параллельных пространств антиматерии
 Единая сущность.
@@ -392,9 +390,7 @@ __protected
 </div>
 <div id="p21" class="content">
   <a name="p21"></a>
-    <h4>21. Тёмные сущности</h4><br>
-    <img id="" src="./img/v_21_1.jpg" alt="" height="72" width="122">
-    <br>
+    <h4>21. Тёмные сущности</h4>
 <p>
               I.
 <p>
@@ -403,9 +399,10 @@ __protected
                    Добрые ангелы не причинят никакого вреда...<br>
 </div>
 <p>
+<img id="" src="./img/v_21_1.jpg" alt="" height="72" width="122"><br>
+<p>
 Со временем я начал замечать, что день стал заканчиваться все раньше. А ночь становится длиннее и длиннее.<br>
- Приходит ощущение что день вскоре не будет наступать постоянно будет ночь длинная чёрная бесконечная.
-
+Приходит ощущение что день вскоре не будет наступать постоянно будет ночь длинная чёрная бесконечная.
 <p>
 Сегодня тоже достаточно рано стемнело. Вирджиния ещё не вернулась. Весь день я провёл во власти закрытой комнаты.<br>
 Я много размышлял над увиденным, пытаясь понять что на самом деле происходит.
@@ -419,19 +416,18 @@ __protected
 - Тебя пытаются вернуть. Продолжим в другой раз. <br>
 
 <p>
-
+<!--
 Я открыл глаза. Напротив меня сидели Maud и Вирджиния<br>
 - Вы знаете, что произошло? – спросил я их<br>
 - Произошёл прорыв пространства. В это измерение вклинилась иная ветвь. <br>
 - Вернее я вклинился<br>
 - Можно сказать и так, но точнее тебя туда втянули. <br>
 - Кто?<br>
-- Сущности иного измерения. Мы же говорили тебе об этом.<br>
+- Сущности иного измерения. Мы же говорили тебе об этом.<br> -->
 
 <p>
 Вокруг находились тёмные сущности. Одни приходят из других вселенных, другие живут прямо здесь.<br>
 Они питаются энергией и желаниями. Они существуют пока ты хочешь этого.
-
 <p>
 Это параллельная многомерное реальность. Она существует здесь и сейчас. <br>
 То что для тебя происходящее порой кажется чем-то выходящим из ряда вон, это следствие того что ты пока ещё воспринимаешь старую трёхмерную реальность и время.<br>
@@ -445,9 +441,7 @@ __protected
 </div>
 <div id="p22" class="content">
   <a name="p22"></a>
-    <h4>22. Iwie & Iiya</h4><br>
-    <img id="" src="./img/v_22_1.png" alt="" height="82" width="122">
-    <br>
+    <h4>22. Iwie & Iiya</h4>
 <p>
 I.
 <p>
@@ -455,6 +449,8 @@ I.
 Мы шли по последней черте<br>
 За которой молчание…<br>
 </div>
+<p>
+<img id="" src="./img/v_22_1.png" alt="" height="82" width="122"><br>
 <p>
 Передо мной сидела женщина с чёрными прямыми волосами. Лоб был укрыт ровной чёлкой, <br>
 примерно до уровня бровей. Вокруг глаз был положен весьма контрастный smokye eyes.<br>
@@ -517,13 +513,12 @@ II.
 </div>
 <div id="p23" class="content">
   <a name="p23"></a>
-    <h4>23. Предчувствие</h4><br>
-    <img id="" src="./img/v_23_1.png" alt="" height="82" width="122">
-    <br>
+    <h4>23. Предчувствие</h4>
 <p>
 I.
-<div class="quote">Когда ты увидишь в глазах своих ночь…</div><br>
-
+<div class="quote">Когда ты увидишь в глазах своих ночь…</div>
+<p>
+<img id="" src="./img/v_23_1.png" alt="" height="82" width="122"><br>
 <p>
 Так как дня в этом пространстве уже давно не наступало, сложно было ответить проснулись мы днём или ночью.   <br>
 - Если ты готов вставать, то приходи на кухню. Попьём чай и поедем в офис.
@@ -542,15 +537,11 @@ I.
 <p>
 
 
-
-
-
 II.
 <p>
 <div class="quote">
-
-                                                                   Тени-тени за моим окном<br>
-                                                           Дверь открыта в мой холодный дом…<br>
+Тени-тени за моим окном<br>
+Дверь открыта в мой холодный дом…<br>
 </div>
 <p>
 Мы приехали в офис. Ruth как обычно уже была на своём рабочем месте. <br>
@@ -599,13 +590,12 @@ Ruth: exploit запущен. Идёт сканирование…<br>
 
 <div id="p24" class="content">
   <a name="p24"></a>
-    <h4>24. Ночная атака</h4><br>
-    <img id="" src="" alt="" height="122" width="52">
-    <br>
+    <h4>24. Ночная атака</h4>
 <p>
 
                I.
 <p>
+<!-- <img id="" src="" alt="" height="122" width="52"><br>   -->
 Ты знаешь, что кто-то есть, но никого не видно...
 <p>
 Перекодировка пространства.
@@ -646,9 +636,8 @@ Ruth взволнованно работала с компьютером.<br>
                            II.
 
 <p>
-                           Увидеть сквозь время и расстояние
-                                    Как окружает всё тёмная…
-
+Увидеть сквозь время и расстояние
+Как окружает всё тёмная…
 <p>
 Ruth работала с терминалом. На чёрном экране монитора бежали бесконечные розово-алые строки с информацией о процессах.<br>
 -Я сейчас переведу пространство в аварийное состояние. Не пугайся<br>
@@ -669,10 +658,10 @@ Ruth работала с терминалом. На чёрном экране м
 </div>
 <div id="p25" class="content">
   <a name="p25"></a>
-    <h4>25. Interrupt</h4><br>
-    <img id="" src="./img/mode.jpg" style="opacity:0.8" height="122" width="52">
-    <br>
+    <h4>25. Interrupt</h4>
 I.
+<p>
+<img id="" src="./img/mode.jpg" style="opacity:0.8" height="92" width="39"><br>
 <p>
   - Сейчас будут выключены основные активы энергополя пространства. :: Ruth<br>
   - Что это значит? – спросил я<br>
@@ -738,10 +727,10 @@ I.
 </div>
 <div id="p26" class="content">
   <a name="p26"></a>
-    <h4>26. Total reload</h4><br>
-    <img id="" src="./img/v_26_1.png" alt="" height="82" width="122">
-    <br>
+    <h4>26. Total reload</h4>
 I.
+<p>
+<img id="" src="./img/v_26_1.png" alt="" height="82" width="122"><br>
 <p>
 Мы перешли в здание, где можно было переждать процесс перезагрузки пространства.<br>
 <p>
@@ -765,12 +754,11 @@ I.
 
 <div id="p27" class="content">
   <a name="p27"></a>
-    <h4>27. Трансцендентальный переход.</h4><br>
-    <img id="" src="./img/v_27_1.png" alt="" height="82" width="122">
-    <br>
+    <h4>27. Трансцендентальный переход.</h4>
 I.
 <p>
-
+<img id="" src="./img/v_27_1.png" alt="" height="82" width="122"><br>
+<p>
 Мы вышли за границы измерения. <br>
 - Удивительно! Невообразимая мерцающая мембрана. Переливы розового света из чёрной пустоты. <br>
 Как электрические разряды. Нет никакой  голубой планеты, никакого бескрайнего космоса и прочей ерунды. Просто потрясающе! <br>
@@ -795,15 +783,14 @@ II.
 </div>
 <div id="p28" class="content">
   <a name="p28"></a>
-    <h4>28. Параллельное измерение</h4><br>
-    <img id="" src="" alt="" height="122" width="52">
-    <br>
+    <h4>28. Параллельное измерение</h4>
 I.
 <p>
 <div class="quote">
 У последней черты нас рассудят<br>
 И времени больше не будет…<br>
 </div>
+<!-- <img id="" src="" alt="" height="122" width="52"><br> -->
 <p>
 Нулевое<br>
 Иные: энергетические формы жизни <br>
@@ -821,19 +808,17 @@ I.
 </div>
 <div id="p29" class="content">
   <a name="p29"></a>
-    <h4>29. Branda</h4><br>
-    <img id="" src="./img/v_29_1.png" alt="" height="62" width="122">
-    <br>
+    <h4>29. Branda</h4>
 I.
 <p>
-
+<img id="" src="./img/v_29_1.png" alt="" height="62" width="122"><br>
+<p>
 - Понимаешь, всё что существует здесь: город, этот мир. Это всё её творение. Вирджиния создала это пространство. <br>
 Это её идеал, который создан так же и для тебя.
 <p>
 - Она хочет вывести пространство на совершенно новый уровень. Перевести в максимальную мерность для такого построения структур. <br>
 Чтобы оно существовало как проявленная объективная реальность, но имело кодировку высших сфер.
 <p>
-
 
 
 - Почему же ты ушла?<br>
@@ -850,17 +835,17 @@ I.
 
 <div id="p" class="content">
   <a name="p"></a>
-    <h4></h4><br>
-    <img id="mod" src="" alt="" height="122" width="52">
-    <br>
+    <h4></h4>
+    <!-- <img id="mod" src="" alt="" height="122" width="52"><br> -->
 
 </div>
 
 </div>
-  <img id="mod" src="./img/фото 1.PNG" height="" width="502"><br>
-  <img id="mod" src="./img/фото 2.PNG" height="" width="502"><br>
-  <img id="mod" src="./img/фото 3.PNG" height="" width="502"><br>
-
+  <div id="pdf_data">
+    <img id="mod" src="./img/фото 1.PNG" height="" width="552"><br>
+    <img id="mod" src="./img/фото 2.PNG" height="" width="552"><br>
+    <img id="mod" src="./img/фото 3.PNG" height="" width="552"><br>
+  </div>
   <script src="./index.js"></script>
   <script src="./main.js"></script>
   <script type="module" src="./app.js"></script>
